cabot.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cabot
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        name: cabot
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
      - name: web
        imagePullPolicy: Always
        image: cabotapp/cabot:0.10.8
        command: ["sh", "-c", "cabot migrate && gunicorn cabot.wsgi:application -b 0.0.0.0:5000 --workers=5"]
        ports:
          - containerPort: 5000
        livenessProbe:
           tcpSocket:
             port: 5000
        readinessProbe:
           tcpSocket:
             port: 5000
      - image: postgres:9.6.3-alpine
        name: postgres
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: cabot-persist
            mountPath: /var/lib/postgresql:rw
      - image: rabbitmq:3.6-alpine
        name: rabbitmq
        imagePullPolicy: Always
        ports:
          - containerPort: 5672
      volumes:
      - name: cabot-persist
        gcePersistentDisk:
          pdName: cabot-persist
          fsType: ext4
