cabot.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cabot
  name: cabot
spec:
  selector:
      name: cabot
  type: NodePort
  ports:
    - port: 9002
      targetPort: 5000
      protocol: TCP
